# score-bundle

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  environment.yml  pyproject.toml
docs/: architecture.excalidraw  deep_baseline_results.md  downstream_tasks_results.md  draft.aux  draft.out  draft.tex  draft.toc  figure_brief.md  formulation.aux  formulation.tex  geometry_direction.md  graphgp_first_design.md  graphgp_theory_alignment.md  handoff_to_claude_code.md  kernel_comparison_experiment.md  kernel_comparison_results.md  masking_sweep_results.md  meeting_digest_2026-07-03.md  meeting_digest_2026-07-10.md  motif_graph_comparison.md  music_lm_design.md  phase0_kickoff.md  phase1_calibration_results.md  phase2_synthetic_pilot.md  pipeline.excalidraw  pipeline_phase1.excalidraw  pipeline_phase2.excalidraw  pipeline_phase3.excalidraw  presentation_brief.md  replication_set_results.md  status_2026-07-02.md  theory_features_results.md  vienna_4x22_scoping.md
evidence/: README.md
examples/: phase0_lm_features_to_prior.py  phase0_pretrain_lm.py  phase1_graphgp.py  phase1_imputation.py  phase1_synthetic_recovery.py
scripts/: audit_graphgp_leakfree.py  audit_kernel_leakfree.py  diag_robust_blowup.py  diag_tau_head_l2.py  diag_tau_s2x3.py  eval_asap_anomaly.py  eval_asap_calibration.py  eval_asap_channelwise.py  eval_asap_completion.py  eval_asap_denoise.py  eval_asap_feature_baseline.py  eval_asap_maskaware.py  eval_asap_robust.py  eval_asap_selective.py  eval_asap_stage2.py  eval_asap_style.py  eval_baselines_loo.py  eval_deep_baseline.py  eval_downstream_gpfirst.py  (+30 more)
(+86 files in other folders)
