[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "score-bundle"
version = "0.1.0"
description = "Bayesian score-informed performance transcription: a score-graph prior over expressive performance variables, with optional differentiable-synthesizer likelihood."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ray" }]
keywords = ["music", "performance", "transcription", "gaussian-markov-random-field", "ddsp", "bayesian"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# scipy gives sparse/selected-inversion paths; sklearn gives the GBM baseline;
# torch is only needed to *train* the Phase-0 music LM (the NumPy model needs nothing).
fast = ["scipy>=1.7"]
baselines = ["scikit-learn>=1.0"]
torch = ["torch>=2.0"]
# `train` adds everything needed to pretrain the Phase-0 LM on real MIDI.
train = ["torch>=2.0", "pretty_midi>=0.2.10", "tqdm>=4.65"]
dev = ["pytest>=7", "scipy>=1.7", "scikit-learn>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/score_bundle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
